--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,6 +1,8 @@
+<div class="back-white">
+  <%= button_to raw('<i class="fa-solid fa-arrow-left"></i>'.html_safe), :back, method: :get, class: 'your-button-class' %>
+</div>
 <div class="page-blog">
   <div class="body-blog">
-
     <div class="container-blog">
       <div class="banner-blog">
         <%= image_tag @blog.banner_image %>
