--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,7 @@
 
 <div class="page-content">
   <div class="container" style="max-width: 1440px;">
-    <%= render "users/banner_perfil" %>
+    <%= render "users/show_banner_perfil" %>
     <%= render "profile_table" %>
   </div>
 </div>
