--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,9 +2,9 @@
 <div class="page-content">
   <div class="container" style="max-width: 1440px;">
 
-    <%= render "banner_perfil" %>
-    <%= render "card_data_perfil" %>
-    <%= render "card_perfil" %>
+    <%= render "show_banner_perfil" %>
+    <%= render "show_card_data_perfil" %>
+    <%= render "show_card_perfil" %>
 
 
 
