--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,14 +4,14 @@
 @import "navbar";
 @import "banner";
 @import "footer";
-@import "card_teacher_home";
-@import "card_community_home";
+
+
 @import "banner_mid";
-@import "card_teacher_home_2";
+
 @import "card_students";
 @import "perfil/banner_perfil";
 @import "perfil/avatar_perfil";
-@import "perfil/info_users";
+@import "perfil/card_data_perfil";
 @import "perfil/card_perfil";
 @import "blog/card_blogs";
 @import "blog/show_blog";
