from bookings listo

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,10 +4,7 @@
 @import "navbar";
 @import "banner";
 @import "footer";
-
-
 @import "banner_mid";
-
 @import "card_students";
 @import "perfil/banner_perfil";
 @import "perfil/avatar_perfil";
@@ -21,3 +18,4 @@
 @import "chatroom";
 @import "devise/login";
 @import "booking/bookings";
+@import "booking/bookings_index";
