--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,117 +1,124 @@
-<% require 'date' %>
+<div class="page-content">
+  <div class="container" style="max-width: 1440px;">
+    <div class="bookings-container" data-controller="booking">
+      <aside class="bookings-navbar">
+        <button data-action="click->booking#indexPendientes" class="opcions">Clases pendientes</button>
+        <button data-action="click->booking#indexProgramadas" class="opcions">Clases programadas</button>
+        <button data-action="click->booking#indexHistorial" class="opcions">Historial</button>
+        <button data-action="click->booking#indexFavoritos" class="opcions">Favoritos</button>
+      </aside>
 
-<ul class="nav nav-tabs mt-5 mx-auto" style="width: 640px; border-bottom: none;" id="myTab" role="tablist">
-  <li class="nav-item button"  role="presentation">
-    <button class="nav-link active" style="background-color: rgba(34, 81, 145, 1); color: white; border: none;" id="classes" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">Clases programadas</button>
-  </li>
-  <li class="nav-item  mx-5 button" role="presentation">
-    <button class="nav-link" style="background-color: rgba(34, 81, 145, 1); color: white; border: none;" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">Historial</button>
-  </li>
-  <li class="nav-item button" role="presentation">
-    <button class="nav-link" style="background-color: rgba(34, 81, 145, 1); color: white; border: none;" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false" disabled>Favoritos</button>
-  </li>
-</ul>
+      <%# Pendientes ---------------------------------------------------------------------------------------------------- %>
 
+      <div class="section-bookings" data-booking-target="pendientes">
+        <h2>Clases pendientes</h2>
+        <div class="section-bookings-body">
+          <p>Escribe aqui abajo tu cod de clases pendientes</p> 
 
-<div class="tab-content" id="myTabContent">
-  <div class="tab-pane fade show active classes" id="home-tab-pane" role="tabpanel" aria-labelledby="classes" tabindex="0">
-    <div class="container mt-2">
-      <ul class="list-group-item" style="background-color: white;">
-        <% @bookings.each do |booking| %>
-          <% if booking.date > Date.yesterday && Time.now > booking.time_in %>
-            <li class="list-group-item d-flex justify-content-between align-items-center">
-              <div class="bookings pt-5 pb-2 container text-center">
-                <div class="row">
-                  <div class="col-12 col-sm-6 col-md-4 col-lg-2">
-                    <%= image_tag booking.teaching_language_session.user.profile_photo, class: "card-img-top", alt: "foto de perfil del profesor" %>
-                  </div>
-                  <div class="col-12 col-sm-6 col-md-4 col-lg-2">
-                    <%= booking.teaching_language_session.user.first_name %> <%= booking.teaching_language_session.user.last_name %> <br>
-                    <%= booking.teaching_language_session.language.to_s.capitalize %>
-                  </div>
-                  <div class="col-12 col-sm-6 col-md-4 col-lg-2">
-                    <p class="">Duración de la clase</p> <br>
-                    <%= "Clase de 60 minutos" %> <br>
-                    <p class="">Recuerda estar conectado antes</p>
-                  </div>
-                  <div class="col-12 col-sm-6 col-md-4 col-lg-2">
-                    <p class="">Clase programada</p> <br>
-                    <%= booking.date.strftime("%A, %d %b %Y") %>
-                    <%= booking.time_in.strftime("%I:%M %p") %> <br>
-                    La hora indicada es local
-                  </div>
-                  <div class="col-12 col-sm-6 col-md-4 col-lg-2">
-                    <% def add_time_to_date(y, m, d, h, t)%>
+        </div>
+      </div>
+
+      <%# Programadas ---------------------------------------------------------------------------------------------------- %>
+
+      <div class="section-bookings" data-booking-target="programadas">
+        <h2>Clases programadas</h2>
+        <div class="section-bookings-body">
+          <% @bookings.each do |booking| %>
+            <% if booking.date > Date.yesterday && Time.now > booking.time_in %>
+              <div class="card-booking-table">
+                <div class="card-booking-image">
+                  <%= image_tag booking.teaching_language_session.user.profile_photo, alt: "foto de perfil del profesor" %>
+                </div>
+                <div class="card-booking-name">
+                  <h2><%= booking.teaching_language_session.user.first_name %>.<%= booking.teaching_language_session.user.last_name.first %></h2>
+                  <p><i class="fas fa-graduation-cap"></i> <%= booking.teaching_language_session.language.to_s.capitalize %></p>
+                </div>
+                <div class="card-booking-date">
+                  <h2>Duración de la clase</h2>
+                  <p><i class="fa-regular fa-clock"></i> Clase de 60 minutos </p>
+                  <p>Recuerda estar conectado antes</p>
+                </div>
+                <div class="card-booking-fech">
+                  <h2>Clase programada</h2>
+                  <p><%= booking.date.strftime("%A, %d %b %Y") %>, <%= booking.time_in.strftime("%I:%M %p") %></p>
+                  <p>La hora indicada es local</p>
+                </div>
+                <div class="card-booking-time">
+                  <% def add_time_to_date(y, m, d, h, t) %>
                     <% return datetime = DateTime.new(y, m, d, h, t) %>
-                    <% end %>
-                    <% estimated_time = Time.at((add_time_to_date(booking.date.year, booking.date.month, booking.date.day, booking.time_in.hour, booking.time_in.min) - DateTime.now).to_i) %>
-                    <%= "Tiempo estimado #{estimated_time.strftime("%H:%M:%S")}" %>
-
-                    <button type="button" class="btn btn-outline-secondary" disabled>Ingresar</button>
-                  </div>
-                  <div class="col-12 col-sm-6 col-md-4 col-lg-2">
-                    <%= link_to "Posponer reserva" , edit_booking_path(booking), class: "classic-btn" %> <br>
-                    <%= link_to "Cancelar reserva", booking_path(booking), class: "classic-btn", data: { turbo_method: :delete, turbo_confirm: "¿Seguro que quieres borrar la reservación?" } %>
-                  </div>
+                  <% end %>
+                  <% estimated_time = Time.at((add_time_to_date(booking.date.year, booking.date.month, booking.date.day, booking.time_in.hour, booking.time_in.min) - DateTime.now).to_i) %>
+                  <h2><%= "Tiempo estimado #{estimated_time.strftime("%H:%M:%S")}" %></h2>
+                  <button type="button" disabled>Ingresar</button>
+                </div>
+                <div class="card-booking-button">
+                  <%= link_to "Posponer reserva", edit_booking_path(booking), class: "posponer"%>
+                  <%= link_to "Cancelar reserva", booking_path(booking), class: "cancelar", data: { turbo_method: :delete, turbo_confirm: "¿Seguro que quieres borrar la reservación?" } %>
                 </div>
               </div>
-            </li>
+            <% end %>
           <% end %>
-        <% end %>
-      </ul>
-      <%#= link_to "Crear reserva", new_booking_path, class: "btn btn-primary mt-3" %>
-    </div>
-  </div>
+        </div>
+      </div>
 
-  <div class="tab-pane fade classes" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
-    <div class="container mt-2">
-      <ul class="list-group-item" style="background-color: white;">
-        <% @bookings.each do |booking| %>
-          <% if booking.date <= Date.yesterday || (booking.date > Date.yesterday && Time.now < booking.time_in) %>
-            <li class="list-group-item d-flex justify-content-between align-items-center">
-              <div class="bookings pt-5 pb-2 container text-center">
-                <div class="row">
-                  <div class="col-12 col-sm-6 col-md-4 col-lg-2">
-                    <%= image_tag booking.teaching_language_session.user.profile_photo, class: "card-img-top", alt: "foto de perfil del profesor" %>
-                  </div>
-                  <div class="col-12 col-sm-6 col-md-4 col-lg-2">
-                    <%= booking.teaching_language_session.user.first_name %> <%= booking.teaching_language_session.user.last_name %> <br>
-                    <%= booking.teaching_language_session.language.to_s.capitalize %>
-                  </div>
-                  <div class="col-12 col-sm-6 col-md-4 col-lg-2">
-                    <p class="">Duración de la clase</p> <br>
-                    <%= "Clase de 60 minutos" %> <br>
-                    <p class="">Recuerda estar conectado antes</p>
-                  </div>
-                  <div class="col-12 col-sm-6 col-md-4 col-lg-2">
-                    <p class="">Clase programada</p> <br>
-                    <%= booking.date.strftime("%A, %d %b %Y") %>
-                    <%= booking.time_in.strftime("%I:%M %p") %> <br>
-                    La hora indicada es local
-                  </div>
-                  <div class="col-12 col-sm-6 col-md-4 col-lg-2">
-                    <% def add_time_to_date(y, m, d, h, t)%>
-                    <% return datetime = DateTime.new(y, m, d, h, t) %>
-                    <% end %>
-                    <% estimated_time = Time.at((add_time_to_date(booking.date.year, booking.date.month, booking.date.day, booking.time_in.hour, booking.time_in.min) - DateTime.now).to_i) %>
-                    <%= "Tiempo estimado #{estimated_time.strftime("%H:%M:%S")}" %>
+<%# Historial ---------------------------------------------------------------------------------------------------- %>
 
-                    <button type="button" class="btn btn-outline-secondary" disabled>Ingresar</button>
-                  </div>
-                  <div class="col-12 col-sm-6 col-md-4 col-lg-2">
-                    <%= link_to "Volver a reagendar" , edit_booking_path(booking), class: "classic-btn" %> <br>
-                  </div>
+      <div class="section-bookings" data-booking-target="historial">
+        <h2>Historial</h2>
+        <div class="section-bookings-body">
+          <% @bookings.each do |booking| %>
+            <% if booking.date <= Date.yesterday || (booking.date > Date.yesterday && Time.now < booking.time_in) %>
+              <div class="card-booking-table">
+                <div class="card-booking-image">
+                  <%= image_tag booking.teaching_language_session.user.profile_photo, alt: "foto de perfil del profesor" %>
+                </div>
+                <div class="card-booking-name">
+                  <h2><%= booking.teaching_language_session.user.first_name %> <%= booking.teaching_language_session.user.last_name %></h2>
+                  <p><i class="fas fa-graduation-cap"></i> <%= booking.teaching_language_session.language.to_s.capitalize %></p>
+                </div>
+                <div class="card-booking-date">
+                  <h2 class="">Duración de la clase</h2>
+                  <p><i class="fa-regular fa-clock"></i> Clase de 60 minutos </p>
+                  <p class="">Recuerda estar conectado antes</p>
+                </div>
+                <div class="card-booking-fech">
+                  <h2>Clase programada</h2>
+                  <p><%= booking.date.strftime("%A, %d %b %Y") %>, <%= booking.time_in.strftime("%I:%M %p") %></p>
+                  <p>La hora indicada es local</p>
+                </div>
+                <div class="card-booking-button">
+                  <h2>Volver a realiza una clase</h2>
+                  <%= link_to "Reservar" , edit_booking_path(booking), class: "volver-a-reservar" %>
                 </div>
               </div>
-            </li>
+            <% end %>
           <% end %>
-        <% end %>
-      </ul>
-      <%#= link_to "Crear reserva", new_booking_path, class: "btn btn-primary mt-3" %>
-    </div>
-  </div>
-  <%# <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0"> %>
-    <%# Favoritas %>
+        </div>
+      </div>
 
+
+<%# Favoritos ---------------------------------------------------------------------------------------------------- %>
+
+      <div class="section-bookings" data-booking-target="favoritos">
+        <h2>Favoritos</h2>
+        <div class="section-bookings-body">
+        <p>Escribe aqui abajo tu cod de favoritos</p>
+
+        </div>
+      </div>
+    </div>
   </div>
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
