--- a/app/views/chatrooms/_chatrooms.html.erb
+++ b/app/views/chatrooms/_chatrooms.html.erb
@@ -1,6 +1,10 @@
 <div class="container">
   <p>_chatrooms_list</p>
   <% @chatrooms.each do |chatroom| %>
-    <%= link_to "#{chatroom.name}", chatroom_path(chatroom) %>
+    <% if current_user == chatroom.sender %>
+      <%= link_to "#{chatroom.recipient.first_name} #{chatroom.recipient.last_name}", chatroom_path(chatroom) %>
+    <% else %>
+      <%= link_to "#{chatroom.sender.first_name} #{chatroom.sender.last_name}", chatroom_path(chatroom) %>
+    <% end %>
   <% end %>
 </div>
