--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -12,7 +12,7 @@
     <%# SELECTED SECTION FROM THE SIDEBAR %>
     <div class="col-md-10">
       <div class="styles-section" data-chats-target="users">
-        <%= render "users/users_chatroom" %>
+        <%= turbo_frame_tag "chat" %>
       </div>
     </div>
 
