--- a/app/views/chatrooms/_chatrooms.html.erb
+++ b/app/views/chatrooms/_chatrooms.html.erb
@@ -2,9 +2,9 @@
   <p>_chatrooms_list</p>
   <% @chatrooms.each do |chatroom| %>
     <% if current_user == chatroom.sender %>
-      <%= link_to "#{chatroom.recipient.first_name} #{chatroom.recipient.last_name}", chatroom_path(chatroom) %>
+      <%= link_to "#{chatroom.recipient.first_name} #{chatroom.recipient.last_name}", chatroom_path(chatroom), data: { turbo_frame: "chat" } %>
     <% else %>
-      <%= link_to "#{chatroom.sender.first_name} #{chatroom.sender.last_name}", chatroom_path(chatroom) %>
+      <%= link_to "#{chatroom.sender.first_name} #{chatroom.sender.last_name}", chatroom_path(chatroom), data: { turbo_frame: "chat" } %>
     <% end %>
   <% end %>
 </div>
