--- a/app/views/users/_show_card_data_perfil.html.erb
+++ b/app/views/users/_show_card_data_perfil.html.erb
@@ -25,7 +25,7 @@
         <p>Seguir</p>
       <% end %>
 
-      <%= button_to "Mensaje", chatrooms_path(sender_id: current_user.id, recipient_id: @user.id), data: { turbo_frame: "_top" } %>
+      <%= button_to "Mensaje", chatrooms_path(sender_id: current_user.id, recipient_id: @user.id) %>
       <%#= button_to chatrooms_path, :chatroom_params => {:sender_id => current_user.id, :recipient_id => @user.id} do %>
       <%#= simple_form_for [@user, @chatroom] do |f| %>
         <%# <i class="fa-solid fa-comment-dots"></i> %>
