--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,17 +1,26 @@
-<div class="forms">
-  <h2 class="forms-title">Nueva reserva</h2>
-  <br>
-  <%= puts @teacher_name %>
-  <%= puts @teacher_language%>
-  <%= puts "Hola" %>
-  <%= simple_form_for @booking, data: { controller: 'flatpickr' } do |f| %>
-    <%= f.input :teacher_name, label: "Profesor", input_html: { value: "#{@teacher_name}", disabled: true }%>
-    <%# <%= f.input :teaching_language_session_id, input_html: { value: @teaching_language_session_id } %>
-    <input name="booking[teaching_language_session_id]" type="hidden" value="<%= @teaching_language_session_id%>">
-    <%= f.input :time_in, label: "Hora de inicio", as: :string, input_html: { data: { flatpickr_target: "timeInput" } } %>
-    <%= f.input :date, label: "Fecha", as: :string, input_html: { data: { flatpickr_target: "dateInput" } } %>
-    <%= f.submit "Crear reserva", class: 'btn btn-primary' %> <%= link_to "Regresar al inicio", bookings_path %>
-  <% end %>
+<div class="page-content">
+  <div class="container" style="max-width: 1440px;">
+    <div class="new-container">
+
+      <div class="new-form">
+        <div class="forms-title">
+          <h2>Nueva reserva</h2>
+        </div>
+        <%= puts @teacher_name %>
+        <%= puts @teacher_language%>
+        <%= puts "Hola" %>
+        <%= simple_form_for @booking, data: { controller: 'flatpickr' } do |f| %>
+          <%= f.input :teacher_name, label: "Profesor", input_html: { value: "#{@teacher_name}", disabled: true }%>
+          <%# <%= f.input :teaching_language_session_id, input_html: { value: @teaching_language_session_id } %>
+          <input name="booking[teaching_language_session_id]" type="hidden" value="<%= @teaching_language_session_id%>">
+          <%= f.input :time_in, label: "Hora de inicio", as: :string, input_html: { data: { flatpickr_target: "timeInput" }, class: "custom-flatpickr-style" } %>
+          <%= f.input :date, label: "Fecha", as: :string, input_html: { data: { flatpickr_target: "dateInput" }, class: "custom-flatpickr-style" } %>
+          <%= f.submit "Aceptar", class: 'botton-aceptar' %> 
+        <% end %>
+        <%= link_to raw('<i class="fa-solid fa-arrow-left"></i>  Volver atrás'), bookings_path %>
+      </div>
+    </div>
+  </div>
 </div>
 
 
