--- a/app/views/users/_show_card_perfil.html.erb
+++ b/app/views/users/_show_card_perfil.html.erb
@@ -2,9 +2,9 @@
 <% if @user.teacher? %>
   <%#= link_to "Reserva tu clase", new_booking_path, class: "booking-button" %>
   <%= link_to "Reserva tu clase", new_booking_path(teacher_name: "#{@user.first_name} #{@user.last_name}", teaching_language_session_id: @user.teaching_language_sessions.first.id), class: "booking-button", disable: true %>
-  <% if @recipient %>
-    <%= link_to "Add a Comment", new_recipient_review_path(@recipient)%>
-  <% end %>
+
+    <%= link_to "Add a Comment", new_perfil_review_path(params[:id]) %>
+
 <% end %>
 
 <div class="row">
