--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -1,47 +1,32 @@
-<div class="container">
-  <div class="styles-header">
-    <h5><%= "#{current_user.first_name} #{current_user.last_name}" %></h5>
-  </div>
+<div class="show-chatroom-container">
+  <%= render "chatrooms" %>
 
-  <div class="row">
-    <%# SIDEBAR %>
-    <aside class="col-md-2 styles-sidebar">
-      <%= render "chatrooms" %>
-    </aside>
+  <%= turbo_frame_tag "chat" do  %>
+    <div class="container-body-chat" data-controller="chatroom-subscription" data-chatroom-subscription-chatroom-id-value="<%= @chatroom.id %>">
+      <div class="title-body-chat">
+        <%= link_to user_path(@chatroom.recipient), style: "text-decoration: none; color: inherit;", data: { turbo_frame: "replace" } do %>
+          <h2><%= @chatroom.recipient.first_name %> <%= @chatroom.recipient.last_name %></h2>
+        <% end %>
 
-    <%# SELECTED SECTION FROM THE SIDEBAR %>
-    <div class="col-md-10">
-      <%# ÁREA PRINCIPAL DEL CHAT %>
-      <div class="">
-        <%= turbo_frame_tag "chat" do  %>
-          <div class="container chatroom" data-controller="chatroom-subscription" data-chatroom-subscription-chatroom-id-value="<%= @chatroom.id %>">
-            <%# PARTICIPANTES %>
-            <h1><%= @chatroom.sender.first_name %> <%= @chatroom.sender.last_name %></h1>
-            <h1><%= @chatroom.recipient.first_name %> <%= @chatroom.recipient.last_name %></h1>
-
-            <%# LISTADO MENSAJES %>
-            <div class="messages" data-chatroom-subscription-target="messages">
-              <% @chatroom.messages.each do |message| %>
-                <%= render "messages/message", message: message %>
-              <% end %>
-            </div>
-
-            <%# INPUT Y BOTÓN ENVIAR MENSAJES %>
-            <%= simple_form_for [@chatroom, @message], html: { data: { action: "turbo:submit-end->chatroom-subscription#resetForm" }, class: "d-flex" } do |f| %>
-              <%# <div data-chatroom-subscription-target="input"> %>
-                <%= f.input :content, label: false, placeholder: "Message ##{@chatroom.name}", wrapper_html: {class: "flex-grow-1"}, id: "message-input" %>
-              <%# </div> %>
-              <%# <div data-chatroom-subscription-target="button"> %>
-                <%= f.submit "Send", class: "btn btn-primary mb-3", id: "message-button" %>
-              <%# </div> %>
+      </div>
+      <div class="messages-body-chat" data-chatroom-subscription-target="messages">
+        <% @chatroom.messages.each do |message| %>
+          <%= render "messages/message", message: message %>
+        <% end %>
+      </div>
+      
+      <div class="form-body-chat">
+        <%= simple_form_for [@chatroom, @message], html: { data: { action: "turbo:submit-end->chatroom-subscription#resetForm" }, class: "d-flex" } do |f| %>
+            <%= f.input :content, label: false, placeholder: "Message ##{@chatroom.name}", wrapper_html: {class: "flex-grow-1"}, id: "message-input" %>
+            <%= button_tag(type: 'submit', class: "btn btn-primary mb-3", id: "message-button") do %>
+              <i class="fab fa-telegram"></i>
             <% end %>
-          </div>
+
+
         <% end %>
       </div>
     </div>
-  </div>
-
+  <% end %>
 </div>
 
 
-    <%#= console %>
