--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,9 +6,9 @@
     <%= render "show_card_data_perfil" %>
     <%= render "show_card_perfil" %>
 
-
-
-
-
   </div>
 </div>
+
+<% content_for :footer do %>
+  <%= render 'shared/footer' %>
+<% end %>
