--- a/app/assets/stylesheets/components/chatroom/_chatroom-partial.scss
+++ b/app/assets/stylesheets/components/chatroom/_chatroom-partial.scss
@@ -1,11 +1,12 @@
 .container-partial{
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 100vh -80px;
   border: rgba(0, 0, 0, 0.1) 1px solid;
   width: 25%;
   
   .title-chat{
+    background: #f0f2f5;
     display: flex;
     height: 100px;
     align-items: center;
