--- a/app/assets/stylesheets/components/chatroom/_chatroom-show.scss
+++ b/app/assets/stylesheets/components/chatroom/_chatroom-show.scss
@@ -17,6 +17,7 @@
     height: 100vh;
     width: 100%;
     overflow: hidden;
+    background: #095f942e;
     
     .title-body-chat{
       display: flex;
@@ -24,6 +25,7 @@
       align-items: center;
       padding: 0px 12px;
       border-bottom: rgba(0, 0, 0, 0.1) 1px solid;
+      background: #f0f2f5;
       h2{
         color: #575966;
         font-family: "Amazon Ember",Arial,sans-serif;
@@ -65,7 +67,7 @@
             border-radius: 1.5rem;
             word-wrap: break-word;
             .message-chat-enviado{
-              font-size: 16px;
+              font-size: 14px;
               font-weight: 400;
               line-height: 20px;
               color: white;
@@ -88,7 +90,6 @@
       }
 
       .other-user {
-
         .dates-messages{
           display: flex;
           padding: 4px; 
@@ -101,10 +102,10 @@
           }
           .text-enviado{
             display: flex;
-            background-color: #f0f0f0;
+            background-color: #ffffff;
             border-radius: 100px;
             .message-chat-enviado{
-              font-size: 16px;
+              font-size: 14px;
               font-weight: 400;
               line-height: 20px;
               color: #575966;
@@ -125,21 +126,51 @@
       }
     }
     .form-body-chat{
-      height: 100px;
+      display: flex;
+      align-items: center;
+      height: 80px;
       border-top: rgba(0, 0, 0, 0.1) 1px solid;
       border-bottom: rgba(0, 0, 0, 0.1) 1px solid;
       padding: 16px 16px;
+      background: #f0f2f5;
+      i{
+        font-size: 20px;
+        color: #225191;
+        margin-right: 24px;
+      }
       .simple_form{
-        background: white;
+        background-color: transparent;
+        display: flex;
+        align-items: center;
+        width: 100%;
+
+
         .mb-3{
-          background: white;
+          background: transparent;
           border: none;
+          margin: 0px 0px 0px 0px;
+          margin-bottom: 0px !important;
+          padding: 22px  0px;
           .form-control{
             background: white;
             border-radius: 1.25rem;
+            margin: 0px;
+            width: 100%; 
+            border: rgba(0, 0, 0, 0.1) 1px solid;
+            
+            &:focus{
+              border: rgba(0, 0, 0, 0.1) 1px solid;
+              box-shadow: none;
+            }
           }
         }
         button{
+          margin: 0px;
+          border: none;
+          width: 36px;
+          height: 36px;
+          background: transparent;
+          margin-left: 12px;
           i{
             font-size: 36px;
             color: #225191;
@@ -149,4 +180,3 @@
     }
   }
 }
-
