--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -2,23 +2,25 @@
   <%= render "chatrooms" %>
 
   <%= turbo_frame_tag "chat" do  %>
-    <div class="container-body-chat" data-controller="chatroom-subscription" data-chatroom-subscription-chatroom-id-value="<%= @chatroom.id %>">
+    <div class="container-body-chat" data-controller="chatroom-subscription" data-chatroom-subscription-chatroom-id-value="<%= @chatroom.id %>" style="background-image: url('<%= asset_url('background-message.png') %>'); ">
       <div class="title-body-chat">
         <%= link_to user_path(@chatroom.recipient), style: "text-decoration: none; color: inherit;", data: { turbo_frame: "replace" } do %>
           <h2><%= @chatroom.recipient.first_name %> <%= @chatroom.recipient.last_name %></h2>
         <% end %>
-
       </div>
-      <div class="messages-body-chat" data-chatroom-subscription-target="messages">
+      <div class="messages-body-chat" data-chatroom-subscription-target="messages" >
         <% @chatroom.messages.each do |message| %>
           <%= render "messages/message", message: message %>
         <% end %>
       </div>
-      
       <div class="form-body-chat">
-        <%= simple_form_for [@chatroom, @message], html: { data: { action: "turbo:submit-end->chatroom-subscription#resetForm" }, class: "d-flex" } do |f| %>
-            <%= f.input :content, label: false, placeholder: "Message ##{@chatroom.name}", wrapper_html: {class: "flex-grow-1"}, id: "message-input" %>
-            <%= button_tag(type: 'submit', class: "btn btn-primary mb-3", id: "message-button") do %>
+        <i class="fa-solid fa-microphone"></i>
+        <i class="fa-solid fa-camera"></i>
+        <i class="fa-solid fa-image"></i>
+        <i class="fa-solid fa-face-smile"></i>
+        <%= simple_form_for [@chatroom, @message], html: { data: { action: "turbo:submit-end->chatroom-subscription#resetForm" }} do |f| %>
+            <%= f.input :content, as: :string, label: false, placeholder: "Escribe tu mensaje... #{@chatroom.name}", wrapper_html: {class: "flex-grow-1"}, id: "message-input" %>
+            <%= button_tag(type: 'submit', id: "message-button") do %>
               <i class="fab fa-telegram"></i>
             <% end %>
         <% end %>
@@ -26,4 +28,3 @@
     </div>
   <% end %>
 </div>
-
