corregido unificación booking new desde perfil de teacher y desde sección encuentra un profesor

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -11,11 +11,11 @@
         <%= puts "Hola" %>
         <%= simple_form_for @booking, data: { controller: 'flatpickr' } do |f| %>
           <%= f.input :teacher_name, label: "Profesor", input_html: { value: "#{@teacher_name}", disabled: true }%>
-          <%# <%= f.input :teaching_language_session_id, input_html: { value: @teaching_language_session_id } %>
-          <input name="booking[teaching_language_session_id]" type="hidden" value="<%= @teaching_language_session_id%>">
-          <%= f.input :time_in, label: "Hora de inicio", as: :string, input_html: { data: { flatpickr_target: "timeInput" }, class: "custom-flatpickr-style" } %>
+          <%= f.input :teaching_language_session_id, as: :hidden, input_html: { value: params[:teaching_language_session_id] }%>
           <%= f.input :date, label: "Fecha", as: :string, input_html: { data: { flatpickr_target: "dateInput" }, class: "custom-flatpickr-style" } %>
-          <%= f.submit "Aceptar", class: 'botton-aceptar' %>
+          <%= f.input :time_in, label: "Hora de inicio", as: :string, input_html: { data: { flatpickr_target: "timeInput" }, class: "custom-flatpickr-style" } %>
+          <%= f.submit "Crear reserva", class: 'botton-aceptar' %>
+
         <% end %>
         <%= link_to raw('<i class="fa-solid fa-arrow-left"></i>  Volver atrás'), bookings_path %>
       </div>
@@ -23,9 +23,6 @@
   </div>
 </div>
 
-  <%= console %>
-
-    <%# <%= f.association :teaching_language_session, label: "Profesor", collection: TeachingLanguageSession.all.map{|t| ["#{t.language}-#{t.user.last_name}", t.id]}, prompt: 'Selecciona un idioma'  %>
 <% content_for :footer do %>
   <%= render 'shared/footer' %>
 <% end %>
