--- a/app/views/users/_show_card_data_perfil.html.erb
+++ b/app/views/users/_show_card_data_perfil.html.erb
@@ -25,31 +25,22 @@
       <% end %>
 
       <%= button_to chatrooms_path(sender_id: current_user.id, recipient_id: @user.id), class: "custom-button", method: :post do %>
-        <i class="fa-solid fa-comment-dots"></i> 
+        <i class="fa-solid fa-comment-dots"></i>
         <p>Mensaje</p>
       <% end %>
 
       <% if @user.teacher? %>
-<<<<<<< HEAD
-
-=======
->>>>>>> master
         <%= link_to new_booking_path(teacher_name: "#{@user.first_name} #{@user.last_name}", teaching_language_session_id: @user.teaching_language_sessions.first.id), class: "booking-button", disable: true do %>
           <i class="fa-solid fa-book"></i>
           <p>Reserva</p>
         <% end %>
-        <%#= link_to new_booking_path do %>
-          <%# <i class="fa-solid fa-book"></i>
-          <p>Reserva</p> %>
-        <%# end %>
+
+        <%= link_to new_user_review_path(params[:id]) do %>
+          <i class="fa-solid fa-book"></i>
+          <p>Deja tu Reseña</p>
+        <% end  %>
+
       <% end %>
     </div>
   </div>
 </div>
-<<<<<<< HEAD
-=======
-
-<% if @user.teacher? %>
-  <%= link_to "Add a Comment", new_perfil_review_path(params[:id]) %>
-<% end %>
->>>>>>> master
