--- a/app/assets/stylesheets/components/reviews/_new_review.scss
+++ b/app/assets/stylesheets/components/reviews/_new_review.scss
@@ -22,12 +22,10 @@
   color: black;
 }
 .valoraciones{
-  margin-top: 35px;
-  display: flow-root;
+  margin-top: 25px;
   font-size: 21px;
   text-align: center;
   width: 50%;
-  border-radius: 10px;
   margin-left: 26%;
 }
 .caja_de_comentario{
@@ -37,4 +35,10 @@
   background-color:white;
   color: black;
 
+}
+.boton-comentario{
+  text-align: center;
+  background-color: white;
+  border-radius: 10px;
+  
 }
