--- a/app/assets/stylesheets/components/reviews/_new_review.scss
+++ b/app/assets/stylesheets/components/reviews/_new_review.scss
@@ -1,15 +1,17 @@
 .container-review{
  background-color:white;
-  max-width: 90%;
-  margin-left: 30px;
-  margin-right: 30px;
+  max-width: 65%;
+  margin-left: 20%;
+  margin-right: 20%;
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
   justify-content: space-evenly;
-  margin-top: 30px;
+  margin-top: 7%;
   margin-bottom: 30px;
   border-radius: 10px;
+  font-family: 'Roboto', sans-serif;
+  font-style: italic;
 
 }
 .titulo-comentario {
@@ -20,6 +22,7 @@
   font-size: 43px;
   margin-top: 43px;
   color: black;
+
 }
 .valoraciones{
   margin-top: 25px;
@@ -27,6 +30,7 @@
   text-align: center;
   width: 50%;
   margin-left: 26%;
+  letter-spacing: 2px;
 }
 .caja_de_comentario{
   max-width: 60%;
@@ -40,5 +44,7 @@
   text-align: center;
   background-color: white;
   border-radius: 10px;
-  
+  margin-left: 40%;
+  margin-top: 10px;
+  margin-bottom: 34px;
 }
