--- a/app/views/users/_show_card_perfil.html.erb
+++ b/app/views/users/_show_card_perfil.html.erb
@@ -79,3 +79,10 @@
     </div>
   </div>
 </div>
+<%# comentario  %>
+<div class="caja-comentario">
+  <% @reviews.each do |review| %>
+      <%= review.comment %>
+      <%= review.rating %>
+    <% end %>
+</div>
