--- a/app/assets/stylesheets/components/blog/_show_blog.scss
+++ b/app/assets/stylesheets/components/blog/_show_blog.scss
@@ -42,8 +42,8 @@
 
     p{
       color: var(--Texto-tandem, #575966);
-      font-family: Roboto;
-      font-size: 24px;
+      font-family: "Amazon Ember",Arial,sans-serif;
+      font-size: 16px;
       font-style: normal;
       font-weight: 400;
       line-height: normal;
@@ -56,7 +56,7 @@
       margin: 16px 0px 32px 0px;
       align-items: center;
       border-radius: 16px;
-      box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
+
 
       img {
         margin: 8px;
@@ -68,7 +68,14 @@
       }
       
       .info-blog{
-        margin: 32px;
+        margin: 32px 32px;
+        color: var(--Texto-tandem, #575966);
+        font-family: "Amazon Ember",Arial,sans-serif;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+
       }
     }
   }
