--- a/app/assets/stylesheets/components/chatroom/_chatroom-partial.scss
+++ b/app/assets/stylesheets/components/chatroom/_chatroom-partial.scss
@@ -8,7 +8,7 @@
   .title-chat{
     background: #f0f2f5;
     display: flex;
-    height: 100px;
+    height: 80px;
     align-items: center;
     padding: 0px 12px;
     border-bottom: rgba(0, 0, 0, 0.1) 1px solid;
@@ -63,11 +63,12 @@
           p{
             color: var(--Texto-tandem, #575966);
             font-family: "Amazon Ember",Arial,sans-serif;
-            font-size: 14px;
+            font-size: 12px;
             font-style: normal;
             font-weight: 400;
             line-height: normal;
             margin: 0px;
+            margin-top: 8px;
           }
           .flech{
             color: var(--Texto-tandem, #575966);
@@ -80,8 +81,6 @@
           }
         }
       }
-
-
     }
   }
 }
