--- a/app/assets/stylesheets/components/perfil/_card_perfil.scss
+++ b/app/assets/stylesheets/components/perfil/_card_perfil.scss
@@ -1,5 +1,5 @@
 .card-container{
-  margin-bottom: 48px;
+  margin-bottom: 16px;
   display: flex;
   padding: 20px;
   flex-direction: column;
@@ -10,26 +10,66 @@
   box-shadow: 0px 0px 32px 0px rgba(0, 0, 0, 0.5); /* Sombra para la tarjeta */
   .titles-info{
     display: flex;
-    align-items: flex-end;
+    align-items: center;
     align-self: stretch;
     border-bottom: 1px solid rgba(152, 152, 152, 0.50);
+    padding-bottom: 8px;
     h4{
       flex: 1 0 0;
-      color: var(--negro-50, rgba(0, 0, 0, 0.50));
+      color: #575966;
       font-family: Amazon Ember;
       font-size: 20px;
       font-weight: 600;
+      margin: 0px;
+    }
+    .total-reviews{
+      display: flex;
+      gap: 8px;
+      margin-right: auto;
+      align-items: center;
+      align-self: center;
+      h4{
+        flex: 1 0 0;
+        color: #575966;
+        font-family: Amazon Ember;
+        font-size: 20px;
+        font-weight: 600;
+        margin: 0px;
+      }
+      p{
+        color: #575966;
+        font-family: Amazon Ember;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+        margin: 0px;
+      }
     }
     p{
-      width: 45px;
-      height: 16px;
+
       color: var(--Texto-verde, #62B242);
       font-family: Amazon Ember;
       font-size: 12px;
       font-style: normal;
       font-weight: 400;
       line-height: normal;
-      margin: 8px;
+      margin: 0px;
+    }
+    a{
+      height: 18px;
+      text-decoration: none;
+      color: var(--Texto-verde, #62B242);
+      font-family: Amazon Ember;
+      font-size: 18px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
+      margin-bottom: 0px;
+      margin: 0px;
+      p{
+        margin: 0px;
+      }
     }
   }
 
@@ -48,8 +88,38 @@
   .infos{
     padding: 8px;
     margin: 0px;
+    max-width: 100%;
+    width: 100%;
+    .review-img-name-rating{
+      max-width: 100%;
+      display: flex;
+      flex-wrap: nowrap;
+      align-items: center;
+      gap: 8px;
+      img{
+        width: 56px;
+        height: 56px;
+        border-radius: 100%;
+        margin-bottom: 8px;
+      }
+      .rating-select{
+        margin-left: auto;
+        color: #fdd835;
+      }
+      .name-fecha{
+        h4{
+          color: #575966;
+          font-family: Amazon Ember;
+          font-size: 18px;
+          font-style: normal;
+          font-weight: 700;
+          line-height: normal;
+          margin: 0px;
+        }
+      }
+    }
     h4{
-      color: var(--negro-50, rgba(0, 0, 0, 0.50));
+    color: #575966;
     font-family: Amazon Ember;
     font-size: 18px;
     font-style: normal;
@@ -57,7 +127,7 @@
     line-height: normal;
     }
     p{
-      color: var(--negro-50, rgba(0, 0, 0, 0.50));
+      color: #575966;
       font-family: Amazon Ember;
       font-size: 16px;
       font-style: normal;
@@ -65,8 +135,16 @@
       line-height: normal;
     }
   }
-  
-  
-
-  
 }
+
+.review-date{
+  font-family: Amazon Ember;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin: 0px;
+  color: #575966;
+}
+
+
