--- a/app/views/users/_card_teachers.html.erb
+++ b/app/views/users/_card_teachers.html.erb
@@ -25,16 +25,16 @@
                   <div class="price">
                     <p><strong><i class="fa-solid fa-dollar-sign"></i> <%= teacher.data_teacher.usd_per_hour %></strong></p>
                     <%# MODIFICACION DE CARD TEACHER %>
-                    <%= button_to chatrooms_path(user_id: current_user.id, teacher_id: teacher.id), class: "reserva-boton", method: :post do %>
-                      <i class="fa-regular fa-heart"></i>
-                    <% end %>
+                    <%#= button_to chatrooms_path(user_id: current_user.id, teacher_id: teacher.id), class: "reserva-boton", method: :post do %>
+                      <%# <i class="fa-regular fa-heart"></i> %>
+                    <%# end %>
                     <%# CIERRA MODIFICACION %>
                   </div>
                   <p>Clases de 60 minutos</p>
                 </div>
                 <div class="dual-boton">
                   <%= link_to "Reservar una clase", new_booking_path(teacher_name: "#{teacher.first_name} #{teacher.last_name}", teaching_language_session_id: teacher.teaching_language_sessions.first.id), class: "reserva-boton" %>
-                  <%= link_to "Envia un mensaje", "#", class: "reserva-boton"%>
+                  <%= button_to "Envia un mensaje", chatrooms_path(sender_id: current_user.id, recipient_id: teacher.id), class: "reserva-boton", method: :post %>
                 </div>
               </div>
             </div>
@@ -52,9 +52,10 @@
             <iframe width="100%" height="315" src="https://www.youtube.com/watch?v=n7D29uDhqjs" frameborder="0" allowfullscreen class="video"></iframe>
           </div>
           <div class="botton-video">
-            <%= link_to "Ver horarios disponibles", bookings_path %>
+            <%#= link_to "Ver horarios disponibles", bookings_path %>
           </div>
         </div>
+
       </div>
     </div>
 
