--- a/app/assets/stylesheets/components/reviews/_new_review.scss
+++ b/app/assets/stylesheets/components/reviews/_new_review.scss
@@ -1,29 +1,75 @@
+.page-content-review{
+  display: flex;
+  height: 80vh;
+  justify-content:center ;
+  align-items: center;
+  align-content:center;
+}
+
 .container-review{
   background-color:white;
-  max-width: 65%;
-  margin-left: 20%;
-  margin-right: 20%;
+  max-width: 720px;
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
-  justify-content: space-evenly;
-  margin-top: 7%;
-  margin-bottom: 30px;
-  border-radius: 10px;
-  font-family: 'Roboto', sans-serif;
-  font-style: italic;
+  border-radius: 16px;
+  font-family: Amazon Ember;
+  color: #575966;
+  margin: auto;
+  margin-top: 50px;
+  padding: 16px;
 
+  .simple_form{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    .review_rating{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 0px;
+      margin-bottom: 0px !important;
+      font-size: 18px;
+      font-weight: 600;
+    }
+    .caja_de_comentario{
+      max-width: 100%;
+      border-radius: 10px;
+      background-color:white;
+      color: #575966;
+    }
+    .boton-comentario{
+      display: flex;
+      justify-content: center;
+      width: 30%;
+      font-size: 16px;
+      font-weight: 600;
+      text-align: center;
+      background-color: white;
+      border-radius: 100px;
+      padding: 8px 24px;
+      border: #225191 1px solid;
+      color: #225191;
+      transition: all 0.3s ease 0s;
+      margin: auto;
+      &:hover{
+        text-align: center;
+        background-color: #225191;
+        border-radius: 100px;
+        padding: 8px 24px;
+        border: none;
+        color: white;
+        border: white 1px solid;
+      }
+      &:active{
+        font-size: 14px;
+        font-weight: 600;
+        padding: 9.5px 71.5px;
+      }
+    }
+  }
 }
-.titulo-comentario {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: row;
-  font-size: 43px;
-  margin-top: 43px;
-  color: black;
 
-}
 .valoraciones{
   margin-top: 25px;
   font-size: 21px;
@@ -32,20 +78,16 @@
   margin-left: 26%;
   letter-spacing: 2px;
 }
-.caja_de_comentario{
-  max-width: 60%;
-  border-radius: 10px;
-  margin-left: 19%;
-  background-color:white;
-  color: black;
 
+
+.review_comment{
+  color: white;
 }
-.boton-comentario{
-  text-align: center;
-  background-color: white;
-  border-radius: 10px;
-  margin-left: 40%;
-  margin-top: 10px;
-  margin-bottom: 34px;
+
+.rating-select .fa-star {
+  cursor: default;
 }
+
+
+
 
