--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,8 +1,17 @@
-<div class="container-review" data-controller="rating">
-  <h2 class="titulo-comentario">¡Comenta!</h2>
-  <%= simple_form_for [@teacher, @review] do |f| %>
-    <%= f.input :rating, collection: (1..5).to_a, label: "Rate your experience", input_html: { data: { controller: "star-rating", action: "click->form-submit#submit" } } %>
-    <%= f.input :comment, placeholder: "Escribe tu comentario", input_html: { class: "caja_de_comentario" } %>
-    <%= f.submit "Agregar comentario", class: "boton-comentario" %>
-  <% end %>
+<% if flash[:notice] %>
+  <div class="alert alert-success">
+    <%= flash[:notice] %>
+  </div>
+<% end %>
+
+<div class="page-content-review">
+  <div class="container" style="max-width: 1440px;">
+    <div class="container-review" data-controller="rating">
+      <%= simple_form_for [@teacher, @review] do |f| %>
+        <%= f.input :rating, collection: (1..5).to_a, label: "Dejanos una calificacion segun tu expeiencia", input_html: { data: { controller: "star-rating", action: "click->form-submit#submit" } } %>
+        <%= f.input :comment, placeholder: "Escribe tu reseña...", input_html: { class: "caja_de_comentario" } %>
+        <%= f.submit "Enviar tu reseña", class: "boton-comentario" %>
+      <% end %>
+    </div>
+  </div>
 </div>
