correcciones tras visualización en localhost

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -120,7 +120,7 @@
         <div class="section-bookings" data-booking-target="favoritos">
           <h2>Favoritos</h2>
           <div class="section-bookings-body">
-          <p>Escribe aqui abajo tu cod de favoritos</p>
+          <%# <p>Escribe aqui abajo tu cod de favoritos</p> %>
           </div>
         </div>
       </div>
@@ -229,7 +229,7 @@
         <div class="section-bookings" data-booking-target="favoritos">
           <h2>Favoritos</h2>
           <div class="section-bookings-body">
-          <p>Escribe aqui abajo tu cod de favoritos</p>
+          <%# <p>Escribe aqui abajo tu cod de favoritos</p> %>
           </div>
         </div>
 
